--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -476,7 +476,7 @@
                 </h2>
                 <ul class="space-y-2">
                     <li>
-                        <a href="index.html#services"
+                        <a href="{% url 'index' %}#services"
                            class="text-gray-400 hover:text-white transition-colors underline-offset-2 hover:underline focus:outline-none focus:ring-2 focus:ring-blue-400 rounded-sm"
                            aria-label="Go to services section">
                             <span x-show="language === 'en'">Services</span>
@@ -484,7 +484,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="index.html#ai-solutions"
+                        <a href="{% url 'index' %}#ai-solutions"
                            class="text-gray-400 hover:text-white transition-colors underline-offset-2 hover:underline focus:outline-none focus:ring-2 focus:ring-blue-400 rounded-sm"
                            aria-label="Go to services section">
                             <span x-show="language === 'en'">AI Solutions</span>
@@ -492,13 +492,13 @@
                         </a>
                     </li>
                     <li>
-                        <a href="index.html#portfolio" class="text-gray-400 hover:text-white transition-colors">
+                        <a href="{% url 'index' %}#portfolio" class="text-gray-400 hover:text-white transition-colors">
                             <span x-show="language === 'en'">Portfolio</span>
                             <span x-show="language === 'ro'">Portofoliu</span>
                         </a>
                     </li>
                     <li>
-                        <a href="index.html#contact" class="text-gray-400 hover:text-white transition-colors">
+                        <a href="{% url 'index' %}#contact" class="text-gray-400 hover:text-white transition-colors">
                             <span x-show="language === 'en'">Contact</span>
                             <span x-show="language === 'ro'">Contact</span>
                         </a>
