--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -427,6 +427,7 @@
                     <span x-show="language === 'en'">Transforming ideas into digital reality since 2019.</span>
                     <span x-show="language === 'ro'">Transformăm idei în realitate digitală din 2019.</span>
                 </p>
+                {% comment %}
                 <div class="flex space-x-4 mt-4">
                     <a href="#"
                        class="text-gray-300 hover:text-white transition-colors duration-200"
@@ -443,6 +444,7 @@
                         <i class="fab fa-github text-xl"></i>
                     </a>
                 </div>
+                {% endcomment %}
             </div>
 
             <!-- Company Details -->
