--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -31,7 +31,7 @@
     <title>Cubevo Data Concept | Modern Software Solutions</title>
 
     <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="{% static 'tailwind/3.4.17' %}"></script>
     <script>
         tailwind.config = {
             darkMode: 'class',
