--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -352,19 +352,23 @@
             x-transition:leave-end="opacity-0 transform -translate-y-4"
             class="md:hidden bg-white dark:bg-gray-900 shadow-md">
             <div class="container mx-auto px-4 py-3 flex flex-col space-y-4">
-                <a href="index.html#services" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
+                <a href="{% url 'index' %}#services" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
                     <span x-show="language === 'en'">Services</span>
                     <span x-show="language === 'ro'">Servicii</span>
                 </a>
-                <a href="index.html#ai-solutions" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
+                <a href="{% url 'index' %}#ai-solutions" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
                     <span x-show="language === 'en'">AI Solutions</span>
                     <span x-show="language === 'ro'">Solutii AI</span>
                 </a>
-                <a href="index.html#portfolio" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
+                <a href="{% url 'microservers' %}" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
+                    <span x-show="language === 'en'">Microservers</span>
+                    <span x-show="language === 'ro'">Microservere</span>
+                </a>
+                <a href="{% url 'index' %}#portfolio" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
                     <span x-show="language === 'en'">Projects</span>
                     <span x-show="language === 'ro'">Proiecte</span>
                 </a>
-                <a href="index.html#contact" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
+                <a href="{% url 'index' %}#contact" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
                     <span x-show="language === 'en'">Contact</span>
                     <span x-show="language === 'ro'">Contact</span>
                 </a>
@@ -491,6 +495,14 @@
                            aria-label="Go to services section">
                             <span x-show="language === 'en'">AI Solutions</span>
                             <span x-show="language === 'ro'">Solutii AI</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{% url 'microservers' %}"
+                           class="text-gray-400 hover:text-white transition-colors underline-offset-2 hover:underline focus:outline-none focus:ring-2 focus:ring-blue-400 rounded-sm"
+                           aria-label="Go to services section">
+                            <span x-show="language === 'en'">Microservers</span>
+                            <span x-show="language === 'ro'">Microservere</span>
                         </a>
                     </li>
                     <li>
