--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -33,7 +33,7 @@
     <title>Cubevo Data Concept | Modern Software Solutions</title>
 
     <!-- Tailwind CSS -->
-    <script src="{% static 'tailwind/3.4.17' %}"></script>
+    <script src="{% static 'tailwind/3.4.17/tailwind.min.js' %}"></script>
     <script>
         tailwind.config = {
             darkMode: 'class',
@@ -55,7 +55,7 @@
     </script>
 
     <!-- Alpine.js -->
-    <script defer src="{% static 'alpine.js/3.14.9' %}"></script>
+    <script defer src="{% static 'alpine.js/3.14.9.js' %}"></script>
     <script>
         document.addEventListener('alpine:init', () => {
             Alpine.store('state', {
