--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -70,7 +70,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
 
     <!-- Font Awesome for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="{% static 'fonts/fontawesome/6.0.0/all.min.css' %}">
 
     <style>
         /* Custom styles for the mirrored 'e' in logo */
