--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -24,7 +24,7 @@
     {% comment %} <link rel="preload" href="https://cdn.tailwindcss.com" as="script"> {% endcomment %}
     {% comment %} <link rel="preload" href="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" as="script"> {% endcomment %}
     <link rel="dns-prefetch" href="https://fonts.googleapis.com">
-    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+    {% comment %} <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com"> {% endcomment %}
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <meta charset="UTF-8">
