--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -24,7 +24,7 @@
     {% comment %} <link rel="preload" href="https://cdn.tailwindcss.com" as="script"> {% endcomment %}
     {% comment %} <link rel="preload" href="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" as="script"> {% endcomment %}
     <link rel="dns-prefetch" href="https://fonts.googleapis.com">
-    {% comment %} <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com"> {% endcomment %}
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <meta charset="UTF-8">
@@ -70,7 +70,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
 
     <!-- Font Awesome for icons -->
-    <link rel="stylesheet" href="{% static 'fonts/fontawesome/6.0.0/all.min.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
     <style>
         /* Custom styles for the mirrored 'e' in logo */
