--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -254,7 +254,7 @@
     <span x-show="language === 'ro'">Salt la conținutul principal</span>
 </a>
 
-{% include "core/header.html" %}
+{% include "core/includes/header.html" %}
 
 <!-- Main content area -->
 <main id="main-content" role="main">
