--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -270,7 +270,7 @@
 
         {% include "core/includes/cookies.html" %}
 
-        <script src="{% static 'js/custom.js' %}"></script>
+        <script src="{% static 'js/main.js' %}"></script>
 
     </body>
 </html>
